--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   server:
     build:
-      context: ./birchwood-server/server
+      context: ./birchwood-server/
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
@@ -12,13 +12,23 @@ services:
 
   blog:
     build:
-      context:  ./birchwood-blog
+      context: ./birchwood-blog
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
     networks:
       - my-network
 
+  cms:
+    build:
+      context: ./birchwood-CMS
+      dockerfile: Dockerfile
+    ports:
+      - "5173:5173"
+    networks:
+      - my-network
+
 networks:
   my-network:
+
 
