--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: "3.9"
 
 services:
   server:
@@ -7,6 +7,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
+    depends_on:
+      - mongodb
+    environment:
+      - MONGO_URI=mongodb://mongodb:27017/
     networks:
       - my-network
 
@@ -28,7 +32,18 @@ services:
     networks:
       - my-network
 
+  mongodb:
+    image: mongo:birchwood-1
+    ports:
+      - "27017:27017"
+    volumes:
+      - dbdata6:/data/db
+    networks:
+      - my-network
+
+volumes:
+  dbdata6:
+
 networks:
   my-network:
-
-
+    driver: bridge
