--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,7 +37,7 @@ jobs:
           ${{ runner.os }}-
 
     - name: Checkout submodules
-      run: git submodule update --init --recursive
+      run: git submodule update --init
 
     - name: Install NextJS dependencies
       if: matrix.app == 'birchwood-blog'
