--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -61,10 +61,9 @@ jobs:
     - name: Build (Next.js app)
       if: matrix.app == 'birchwood-blog'
       working-directory: ./birchwood-blog
-      run: workflow_dispatch
-      # run: npm run build
-      # env:
-      #   NEXT_PUBLIC_API_URL: localhost:3000
+      run: npm run build
+      env:
+        NEXT_PUBLIC_API_URL: localhost:3000
 
     # - name: Build and test (Vue app)
     #   if: matrix.app == 'birchwood-CMS'
