--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -64,6 +64,7 @@ jobs:
       run: npm run build
       env:
         NEXT_PUBLIC_API_URL: localhost:3000
+        SKIP_ENV_VALIDATION: true
 
     # - name: Build and test (Vue app)
     #   if: matrix.app == 'birchwood-CMS'
