--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,11 +42,7 @@ jobs:
     - name: Install NextJS dependencies
       if: matrix.app == 'birchwood-blog'
       working-directory: ./birchwood-blog
-      run: |
-        echo "PWD:"
-        pwd
-        ls -lah
-        npm install
+      run: npm install
 
     # - name: Install dependencies (Vue app)
     #   if: matrix.app == 'birchwood-CMS'
@@ -61,9 +57,7 @@ jobs:
     - name: Build (Next.js app)
       if: matrix.app == 'birchwood-blog'
       working-directory: ./birchwood-blog
-      run: |
-        ls -lah
-        npm run build
+      run: npm run build
       env:
         NEXT_PUBLIC_API_URL: localhost:3000
         SKIP_ENV_VALIDATION: true
