--- a/birchwood-k8s/cluster-nodes/bw-cms/templates/service.yaml
+++ b/birchwood-k8s/cluster-nodes/bw-cms/templates/service.yaml
@@ -1,15 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "bw-cms.fullname" . }}
-  labels:
-    {{- include "bw-cms.labels" . | nindent 4 }}
+  name: birchwood-cms
+  namespace: cms
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
   selector:
-    {{- include "bw-cms.selectorLabels" . | nindent 4 }}
+    app: birchwood-cms
+  ports:
+    - name: http
+      protocol: TCP
+      port: 80 
+      targetPort: 5173
+  type: ClusterIP
