--- a/birchwood-k8s/cluster-nodes/bw-server/templates/service.yaml
+++ b/birchwood-k8s/cluster-nodes/bw-server/templates/service.yaml
@@ -1,15 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "bw-server.fullname" . }}
-  labels:
-    {{- include "bw-server.labels" . | nindent 4 }}
+  name: birchwood-server
+  namespace: server
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
   selector:
-    {{- include "bw-server.selectorLabels" . | nindent 4 }}
+    app: birchwood-server
+  ports:
+    - name: http
+      protocol: TCP
+      port: 80 
+      targetPort: 8000
+  type: ClusterIP
