--- a/birchwood-server/Dockerfile
+++ b/birchwood-server/Dockerfile
@@ -1,9 +1,20 @@
-FROM node:20-alpine
+# Stage 1: Build the application
+FROM node:20 AS builder
 WORKDIR /app
-COPY package*.json ./
+COPY package.json ./
+COPY package-lock.json ./
 RUN npm install --production
 COPY . .
+RUN npm run build
+
+# Stage 2: Run the application
+FROM node:20-slim
+WORKDIR /usr/src/app
+COPY --from=builder /app/package.json ./
+COPY --from=builder /app/package-lock.json ./
+COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/node_modules ./node_modules
 
 EXPOSE 8000
 
-CMD ["npm", "start"]
+CMD ["npm", "run", "serve"]
