initial commit for helm templates

--- a/birchwood-k8s/helm-templates/common/templates/serviceaccount.yaml
+++ b/birchwood-k8s/helm-templates/common/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "mongo.serviceAccountName" . }}
+  name: {{ include "common.serviceAccountName" . }}
   labels:
-    {{- include "mongo.labels" . | nindent 4 }}
+    {{- include "common.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
